페이지 기초

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,149 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>회원 가입 페이지</title>
-  <link rel="stylesheet" href="./resources/css/style.css" />
-  <script src="./resources/js/test.mjs" type="module"></script>
-</head>
-<body>
-<div>
-  <h1>회원가입 페이지</h1>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>게시판 상세페이지</title>
+    <link rel="stylesheet" href="./resources/css/main.css" />
+    <script src="./resources/js/test.mjs" type="module"></script>
+  </head>
+  <body>
+    <header>
+      <h1>막내야 골라봐</h1>
+      <div class="header-menu">
+        <span>게시판</span>
+        <span>로그인</span>
+        <span>회원가입</span>
+      </div>
+    </header>
+    <article>
+      <div id="middle-title">
+        <h3>Article</h3>
+      </div>
+      <div id="article-body">
+        <div>
+          <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
+            atque ipsam maxime natus nemo nobis officiis placeat recusandae sit
+            voluptatibus! Amet, asperiores dolor enim iure mollitia nulla
+            provident sint tempore!
+          </div>
+          <div>
+            Ab beatae eius eligendi enim est facilis, iusto maxime minus neque
+            placeat porro quia quis quos sint tempore? A accusamus dolores
+            doloribus earum eveniet non reiciendis repellat totam ut vitae.
+          </div>
+          <div>
+            Architecto dolore doloribus et excepturi explicabo hic illum iusto
+            labore magnam, minima necessitatibus nulla numquam odio
+            reprehenderit soluta temporibus, vel veniam voluptatibus? Alias
+            aliquid animi facere inventore molestias sapiente suscipit?
+          </div>
+          <div>
+            Aliquid aspernatur blanditiis debitis distinctio doloribus ea,
+            eveniet expedita fuga fugiat hic id impedit ipsam ipsum laboriosam
+            magnam numquam obcaecati odit, optio quisquam ratione sequi suscipit
+            temporibus voluptate. Quam, quibusdam?
+          </div>
+          <div>
+            Accusamus ad, architecto assumenda aut dicta earum error et, id,
+            illum itaque molestias non odio officia pariatur placeat quas quasi
+            quia quod quos recusandae reiciendis soluta ullam veniam vero
+            voluptate.
+          </div>
+          <div>
+            Animi aspernatur atque dolore est eveniet fugit harum illo incidunt
+            ipsa itaque modi mollitia neque nisi nobis nostrum possimus quae
+            quam qui quisquam, repellendus sequi sint sit temporibus unde vero!
+          </div>
+          <div>
+            Accusamus accusantium assumenda at blanditiis consequatur
+            consequuntur, culpa cum ducimus impedit laboriosam maiores nihil
+            nisi perferendis quaerat quisquam repudiandae sequi tempora ullam
+            velit voluptates. Blanditiis dolore dolorum magni obcaecati qui.
+          </div>
+          <div>
+            Consectetur ducimus eaque, illo laudantium odio sequi veritatis.
+            Aliquam debitis dolorum ducimus eius eveniet impedit numquam
+            perferendis placeat porro quasi, quis quisquam quo reiciendis saepe
+            suscipit. Explicabo maiores officiis provident.
+          </div>
+          <div>
+            Ab animi, fuga incidunt nam natus reiciendis! Ad commodi dignissimos
+            ducimus ea, eum eveniet expedita molestiae non numquam officiis
+            porro provident temporibus velit vero voluptatum? Beatae dolor
+            itaque voluptas? Quasi?
+          </div>
+          <div>
+            Consequatur debitis dignissimos doloribus ducimus maxime quae
+            quaerat sapiente veniam. Assumenda laborum perferendis perspiciatis
+            quis sed soluta veniam! Autem delectus facilis in libero nam nisi
+            odio omnis, perspiciatis quam sint.
+          </div>
+          <div>
+            Ad aspernatur commodi cumque, cupiditate debitis dolorem ducimus
+            eaque eveniet ex expedita fuga hic iste laborum libero minus, neque
+            odit quam quis similique suscipit ullam vel veniam vero voluptas
+            voluptatum.
+          </div>
+          <div>
+            Ab accusantium aperiam beatae deleniti, exercitationem illum modi
+            nemo nihil non odio, officiis optio perspiciatis quasi quos
+            reiciendis sed, unde. Consectetur cupiditate fuga laborum nemo
+            nesciunt numquam odio reprehenderit, sunt!
+          </div>
+          <div>
+            Aut blanditiis delectus dolor doloremque doloribus dolorum eius enim
+            eos expedita explicabo illo incidunt ipsum laboriosam molestiae nam
+            neque pariatur quaerat quas quibusdam ratione, sunt tempore tenetur
+            ut veniam voluptates.
+          </div>
+          <div>
+            Accusantium, ad consequuntur doloribus eaque fuga molestiae
+            obcaecati possimus voluptates? Animi autem consequatur consequuntur
+            delectus doloribus eos facere ipsa labore, magni maxime placeat
+            quidem repellendus repudiandae tempora ullam, unde veniam!
+          </div>
+          <div>
+            Cumque dolore dolores esse, ipsum magni maiores nihil suscipit unde
+            voluptates voluptatum! Accusamus architecto cumque distinctio,
+            dolore enim id iure magni minus praesentium quaerat, quia reiciendis
+            rem repellendus voluptates voluptatibus.
+          </div>
+          <div>
+            Aliquid eveniet incidunt ipsa ipsum laudantium minus molestiae,
+            numquam officiis quos ullam. Assumenda consectetur dolor dolores
+            error esse ex expedita laboriosam maiores nobis omnis optio quisquam
+            repellendus suscipit vitae, voluptate?
+          </div>
+          <div>
+            At blanditiis, commodi culpa ducimus earum eum hic illum incidunt
+            ipsam iusto libero modi nesciunt odio, provident, quaerat quam quas
+            quasi quis quisquam ratione recusandae rerum sint soluta velit
+            veritatis.
+          </div>
+          <div>
+            Beatae cumque eveniet facere maxime modi obcaecati quasi tempora.
+            Eos ex illum praesentium ratione. Eveniet inventore ipsam quod velit
+            veritatis. Blanditiis dignissimos doloremque magni mollitia odit
+            provident, quibusdam veritatis voluptatem!
+          </div>
+          <div>
+            Assumenda beatae corporis dolore ducimus error esse ex,
+            exercitationem fuga harum laudantium nisi nobis porro quibusdam
+            ratione rem unde veniam? Assumenda delectus, eos excepturi facere id
+            non quas quibusdam totam.
+          </div>
+          <div>
+            Alias aliquid, beatae ea eveniet ex itaque necessitatibus nihil
+            pariatur perferendis qui quisquam reprehenderit, voluptate
+            voluptatem! Consequuntur facilis magni modi molestiae totam! Autem
+            blanditiis minima natus odio rem reprehenderit voluptatum!
+          </div>
+        </div>
+      </div>
+      <div id="article-comment">
+
+      </div>
+    </article>
+  </body>
 </html>
